--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation project(path: ':app_common_library')
+//    implementation 'com.github.xue12311:BadgerDemo:1.0.0'
 }
