--- a/app_common_library/build.gradle
+++ b/app_common_library/build.gradle
@@ -54,11 +54,11 @@ dependencies {
     api 'androidx.core:core-ktx:1.3.2'
     api 'androidx.appcompat:appcompat:1.2.0'
     api 'com.google.android.material:material:1.2.1'
-    api 'androidx.constraintlayout:constraintlayout:2.0.2'
+    api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     //RecyclerView 框架
-    api  'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    api  'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
     //multidex 分包
     api 'androidx.multidex:multidex:2.0.1'
     //帮助类
@@ -75,7 +75,7 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     //内存泄露leakcanary
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
+    //debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
     //网络请求 -- 必须
     api 'com.ljx.rxhttp:rxhttp:2.4.1'
     kapt 'com.ljx.rxhttp:rxhttp-compiler:2.4.1'
