升级相关依赖

--- a/app_common_library/src/main/AndroidManifest.xml
+++ b/app_common_library/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:value="GlideModule" />
         <provider
             android:name=".utils.MyFileProvider"
-            android:authorities="${applicationId}.fileprovider"
+            android:authorities="$app_common_library.{applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
