--- a/app_common_library/build.gradle
+++ b/app_common_library/build.gradle
@@ -13,8 +13,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
         multiDexEnabled true
@@ -54,15 +54,15 @@ dependencies {
     api 'androidx.core:core-ktx:1.3.2'
     api 'androidx.appcompat:appcompat:1.2.0'
     api 'com.google.android.material:material:1.2.1'
-    api 'androidx.constraintlayout:constraintlayout:2.0.2'
+    api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     //RecyclerView 框架
-    api  'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    api  'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
     //multidex 分包
     api 'androidx.multidex:multidex:2.0.1'
     //帮助类
-    api 'com.blankj:utilcodex:1.29.0'
+    api 'com.blankj:utilcodex:1.30.5'
     //生命周期
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
     //ViewModelScope
@@ -74,8 +74,8 @@ dependencies {
     //kotlin协程
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    //内存泄露leakcanary
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
+//    //内存泄露leakcanary
+//    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
     //网络请求 -- 必须
     api 'com.ljx.rxhttp:rxhttp:2.4.1'
     kapt 'com.ljx.rxhttp:rxhttp-compiler:2.4.1'
