--- a/app_common_library/build.gradle
+++ b/app_common_library/build.gradle
@@ -74,14 +74,14 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 //    //内存泄露leakcanary
 //    debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
-    //网络请求 -- 必须
-    api 'com.ljx.rxhttp:rxhttp:2.4.1'
-    kapt 'com.ljx.rxhttp:rxhttp-compiler:2.4.1'
-    api "com.squareup.okhttp3:okhttp:4.8.1"
+//    //网络请求 -- 必须
+//    api 'com.ljx.rxhttp:rxhttp:2.4.1'
+//    kapt 'com.ljx.rxhttp:rxhttp-compiler:2.4.1'
+//    api "com.squareup.okhttp3:okhttp:4.8.1"
     //管理协程生命周期，页面销毁，关闭请求
     api 'com.ljx.rxlife:rxlife-coroutine:2.0.1'
-    //图片加载Glide
-    api "com.github.bumptech.glide:glide:4.11.0"
-    kapt "com.github.bumptech.glide:compiler:4.11.0"
+//    //图片加载Glide
+//    api "com.github.bumptech.glide:glide:4.11.0"
+//    kapt "com.github.bumptech.glide:compiler:4.11.0"
 
 }
