--- a/app_common_library/build.gradle
+++ b/app_common_library/build.gradle
@@ -78,8 +78,8 @@ dependencies {
 //    api 'com.ljx.rxhttp:rxhttp:2.4.1'
 //    kapt 'com.ljx.rxhttp:rxhttp-compiler:2.4.1'
 //    api "com.squareup.okhttp3:okhttp:4.8.1"
-    //管理协程生命周期，页面销毁，关闭请求
-    api 'com.ljx.rxlife:rxlife-coroutine:2.0.1'
+//    //管理协程生命周期，页面销毁，关闭请求
+//    api 'com.ljx.rxlife:rxlife-coroutine:2.0.1'
 //    //图片加载Glide
 //    api "com.github.bumptech.glide:glide:4.11.0"
 //    kapt "com.github.bumptech.glide:compiler:4.11.0"
