--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.21"
+    ext.kotlin_version = "1.5.21"
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url "http://repo.pageturner-reader.org" }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
@@ -15,8 +20,12 @@ buildscript {
 allprojects {
     repositories {
         google()
-        maven { url 'https://jitpack.io' }
         jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url "http://repo.pageturner-reader.org" }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
     }
 }
 
