--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.6.10"
     repositories {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
-        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url "http://repo.pageturner-reader.org" }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "com.android.tools.build:gradle:7.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 allprojects {
     repositories {
-        google()
-        jcenter()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
-        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url "http://repo.pageturner-reader.org" }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
+        google()
+        maven { url "https://jitpack.io" }
+        jcenter()
     }
 }
 
