--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+android.overridePathCheck=true
+
 authToken=jp_gv6rh7vvim9ll6m868pkji36e7
