版本升级至 1.1.4

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 buildscript {
-    ext.kotlin_version = "1.6.10"
+    ext.kotlin_version = "1.8.21"
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
@@ -14,6 +17,9 @@ allprojects {
     repositories {
         google()
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
         mavenCentral()
         jcenter()
     }
